--- a/produto.html
+++ b/produto.html
@@ -139,7 +139,7 @@
           </p>
 
           <a href="https://wa.me/5511980354856?text=${encodeURIComponent(
-            "Olá! Gostaria de saber mais sobre a imagem: " + produto.nome
+            "Olá! Estava vendo o seu site e gostaria de saber mais detalhes sobre a imagem: " + produto.nome
           )}"
              target="_blank"
              class="inline-block mt-8 bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 transition">
@@ -188,6 +188,7 @@
         }, 4000);
 
         /* ===== ZOOM ===== */
+        /*
         function openZoom(src) {
           autoplay = false;
 
@@ -201,7 +202,8 @@
           };
 
           document.body.appendChild(overlay);
-        }
+        } */
+
       });
   </script>
 
